[tool.poetry]
name = "finalproject_gorelikov_М25-555"
version = "0.1.0"
description = "ValutaTrade Hub: Core+CLI платформа для симуляции валютной торговли"
authors = ["a.gorelikov <belstrel@gmail.com>"]
readme = "README.md"
packages = [ { include = "valutatrade_hub" } ]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
prettytable = "^3.10.0"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"


[tool.poetry.scripts]
#project = "valutatrade_hub.cli.interface:main"
project = "main:main"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"